--- a/src/pages/muzika/lacho.astro
+++ b/src/pages/muzika/lacho.astro
@@ -39,7 +39,7 @@ import PageLayout from '../../layouts/PageLayout.astro'
                       ><img
                         style="display:inline-block; height: 60px; width: auto;"
                         alt="Get it on Google Play"
-                        src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png"
+                        src="https://play.google.com/intl/en_us/badges/trystavisim/images/generic/en_badge_web_generic.png"
                       /></a
                     >
                     <p>&nbsp;</p>
@@ -47,7 +47,8 @@ import PageLayout from '../../layouts/PageLayout.astro'
                       <b>Студія запису:</b>&nbsp; <a
                         class="usually"
                         href="http://solist.in.ua"
-                        target="_self">SOLIST Studio</a>
+                        target="_self">SOLIST Studio</a
+                      >
                     </p>
                     <p><b>Дата релізу:&nbsp;</b>27 січня, 2015</p>
                     <p>
@@ -80,7 +81,7 @@ import PageLayout from '../../layouts/PageLayout.astro'
                     ><img
                       style="display:inline-block; height: 60px; width: auto;"
                       alt="Get it on Google Play"
-                      src="https://play.google.com/intl/en_us/badges/images/generic/en_badge_web_generic.png"
+                      src="https://play.google.com/intl/en_us/badges/trystavisim/images/generic/en_badge_web_generic.png"
                     /></a
                   >
                 </div>
