fix download links

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -1,4 +1,7 @@
-<!doctype html>
+---
+import '../css/styles.css'
+---
+
 <html lang="uk-UA">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -34,25 +37,7 @@
     <link rel="stylesheet" type="text/css" href="/trystavisim/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="/trystavisim/css/simple-line-icons.css" />
     <link rel="stylesheet" type="text/css" href="/trystavisim/css/custom.css" />
-  </head><div class="fit-vids-style" id="fit-vids-style" style="display: none;">
-    ­<style>
-      .fluid-width-video-wrapper {
-        width: 100%;
-        position: relative;
-        padding: 0;
-      }
-
-      .fluid-width-video-wrapper iframe,
-      .fluid-width-video-wrapper object,
-      .fluid-width-video-wrapper embed {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-      }
-    </style>
-  </div>
+  </head><div class="fit-vids-style" id="fit-vids-style" style="display: none;"></div>
   <script type="text/javascript" async="" is:inline src="/trystavisim/js/analytics.js"></script>
   <script src="/trystavisim/js/all.js" is:inline async="" crossorigin="anonymous"></script>
   <script id="facebook-jssdk" src="/trystavisim/js/all(1).js"></script>
