--- a/src/pages/ajax/lacho.astro
+++ b/src/pages/ajax/lacho.astro
@@ -43,11 +43,13 @@ export const partial = true
                     <b>Студія запису:</b>&nbsp; <a
                       class="usually"
                       href="http://solist.in.ua"
-                      target="_self">SOLIST Studio</a>
+                      target="_self">SOLIST Studio</a
+                    >
                   </p><p><b>Дата релізу:&nbsp;</b>27 січня, 2015</p><p>
                     <b>Придбати CD:&nbsp;</b>
                     <a class="usually" href="mailto:info@trystavisim.com" target="_blank"
-                      >Напишіть нам</a>
+                      >Напишіть нам</a
+                    >
                   </p>
                 </div>
               </div>
@@ -82,7 +84,7 @@ export const partial = true
           <!-- Button -->
           <div class="work-full-action">
             <a
-              href="/download/Trystavisim_LATCHO.zip"
+              href="/trystavisim/download/Trystavisim_LATCHO.zip"
               class="btn btn-spacia btn-color btn-medium download-file-work">Скачати альбом</a
             >
           </div>
