--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -425,7 +425,7 @@ End Works Filter -->
       <!-- Work Item -->
       <li class="work-item mix video mix_all" style="display: inline-block;  opacity: 1;">
         <a
-          href="/trystavisim/ajax/trystavisim/media/varoshs-ka-tusa-live"
+          href="/trystavisim/ajax/media/varoshs-ka-tusa-live"
           class="work-item-link"
           data-hash="varoshs-ka-tusa-live"
         >
@@ -448,7 +448,7 @@ End Works Filter -->
       <!-- Work Item -->
       <li class="work-item mix video mix_all" style="display: inline-block;  opacity: 1;">
         <a
-          href="/trystavisim/ajax/trystavisim/media/varoshs-ka-tusa"
+          href="/trystavisim/ajax/media/varoshs-ka-tusa"
           class="work-item-link"
           data-hash="varoshs-ka-tusa"
         >
@@ -470,11 +470,7 @@ End Works Filter -->
       <!-- End Work Item -->
       <!-- Work Item -->
       <li class="work-item mix video mix_all" style="display: inline-block;  opacity: 1;">
-        <a
-          href="/trystavisim/ajax/trystavisim/media/rejndzheri"
-          class="work-item-link"
-          data-hash="rejndzheri"
-        >
+        <a href="/trystavisim/ajax/media/rejndzheri" class="work-item-link" data-hash="rejndzheri">
           <div class="work-img">
             <img
               class="work-img"
@@ -494,7 +490,7 @@ End Works Filter -->
       <!-- Work Item -->
       <li class="work-item mix video mix_all" style="display: inline-block;  opacity: 1;">
         <a
-          href="/trystavisim/ajax/trystavisim/media/varosh-banda"
+          href="/trystavisim/ajax/media/varosh-banda"
           class="work-item-link"
           data-hash="varosh-banda"
         >
@@ -517,7 +513,7 @@ End Works Filter -->
       <!-- Work Item -->
       <li class="work-item mix video mix_all" style="display: inline-block;  opacity: 1;">
         <a
-          href="/trystavisim/ajax/trystavisim/media/nasha-fajta2"
+          href="/trystavisim/ajax/media/nasha-fajta2"
           class="work-item-link"
           data-hash="nasha-fajta2"
         >
@@ -540,7 +536,7 @@ End Works Filter -->
       <!-- Work Item -->
       <li class="work-item mix video mix_all" style="display: inline-block;  opacity: 1;">
         <a
-          href="/trystavisim/ajax/trystavisim/media/pujdu-prujdus-live"
+          href="/trystavisim/ajax/media/pujdu-prujdus-live"
           class="work-item-link"
           data-hash="pujdu-prujdus-live"
         >
@@ -563,7 +559,7 @@ End Works Filter -->
       <!-- Work Item -->
       <li class="work-item mix video mix_all" style="display: inline-block;  opacity: 1;">
         <a
-          href="/trystavisim/ajax/trystavisim/media/nasha-fajta-music-video"
+          href="/trystavisim/ajax/media/nasha-fajta-music-video"
           class="work-item-link"
           data-hash="nasha-fajta-music-video"
         >
@@ -586,7 +582,7 @@ End Works Filter -->
       <!-- Work Item -->
       <li class="work-item mix video mix_all" style="display: inline-block;  opacity: 1;">
         <a
-          href="/trystavisim/ajax/trystavisim/media/dislokaciya"
+          href="/trystavisim/ajax/media/dislokaciya"
           class="work-item-link"
           data-hash="dislokaciya"
         >
@@ -1132,7 +1128,7 @@ End Works Filter -->
               </div>
               <div class="contact-text">
                 <a
-                  href="https://trystavisim.com/content/download/389/6673/file/TRYSTAVISIM_TechRider_(ua).pdf"
+                  href="https://trystavisim.com/content/trystavisim/download/389/6673/file/TRYSTAVISIM_TechRider_(ua).pdf"
                   >Технічний райдер</a
                 >
               </div>
