--- a/src/pages/ajax/karpatos.astro
+++ b/src/pages/ajax/karpatos.astro
@@ -1,52 +1,102 @@
 ---
-export const partial = true;
+export const partial = true
 ---
 
 <section id="work-item" class="work-container">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 col-lg-10 col-lg-offset-1">
-                <!-- Work Title -->
-                <h1 class="work-full-title">КАРПАТОС</h1>
-                                <!-- Work Categories -->
-                <div class="work-descr">
-                    Single, 2017
-                </div>
-                                <!-- Work Photo or Video -->
-                <div class="work-full-media">
-                    <div class="fluid-width-video-wrapper" style="padding-top: 56.25%;"><iframe src="https://www.youtube.com/embed/lIBEOXYIMeE" frameborder="0" allowfullscreen="" id="fitvid764251"></iframe></div>
-                                    </div>
-                <!-- Work Text -->
-                <div class="work-full-text">
-                    <div class="row">
-                                            <!-- Project Detail -->
-                        <div class="col-md-4 col-lg-4">
-                            <div class="work-detail">
-                                <h6 class="uppercase">Деталі</h6>
-                                <div class="work-full-detail">
-                                    
-<p><b>Mix &amp; Mastering:</b>&nbsp;<br>	<a class="usually" href="https://www.facebook.com/ColoorsunMusic/" target="_blank">COLOORSUN music studio</a></p><p><b>Recording:&nbsp;</b>	<a class="usually" href="https://www.facebook.com/Vitalik.Levshakov" target="_blank">Віталік Лєвшаков</a>,&nbsp;<br>Олeг Орєшніков,&nbsp;	<a class="usually" href="https://www.facebook.com/solist.engin/" target="_blank">SOLIST Studio</a></p><p><b>Дата релізу: </b>28&nbsp;вересня 2017</p>                                </div>
-                            </div>
-                        </div>
-                        <!-- End Project Detail -->
-                                                                <!-- About Project -->
-                        <div class="col-md-8 col-lg-8">
-                                                        <div class="text-block">
-                                
-<p>Представляємо нову пісню<b>&nbsp;Триставісім - «Карпатос»</b> з майбутнього альбому LP "<b>Мусай</b>".</p><p>«Ми народились та живемо у краю, який за останні сто років встиг побувати у складі більш ніж десяти держав та державних утворень. Люди тут звикли покладатись тільки на себе, не довіряючи владі та не чекаючи від неї підтримки та схвалення їх стилю життя. Натомість єдність з природою та гармонія з Богом у душі лише допомагають їм долати будь-які перешкоди. Можливо, збоку це і виглядає трохи «дикувато», проте має на це свою правду», – кажуть музиканти.</p><p>«Карпатос» – пісня, яка в музичному плані найкраще відображає наше сьогоднішнє бачення правильного поєднання рок-рифів, хіп-хоп- та панк-ритмів з автентичними фольковими мотивами. Мелодію, яка виспівується на початку пісні та проходить крізь всю композицію вигадав наш трубач Вова. Він якось наспівав її мені і додав, що з цього має вийти яскравий грувовий трек. В мене на той момент вже були накидані куплети, і на одній з репетицій ми вирішили поєднати все разом, а врешті розвили до повноцінної пісні. Під час роботи над композицією до нас приєднався ужгородський скретч-майстер DJ Vibes і, трохи проекспериментувавши, майстерно запилив до пісні пару-тройку скретчів, які природньо вписалися в загальне звучання», – розповідає фронтмен гурту Павло Генов,</p><p>&nbsp;</p><p>
-ТРИСТАВІСІМ в мережі:<br>
-	<a class="usually" href="http://trystavisim.com" target="_self">http://trystavisim.com/</a><br>
-	<a class="usually" href="https://facebook.com/trystavisim" target="_self">https://facebook.com/trystavisim</a><br>
-	<a class="usually" href="https://soundcloud.com/trystavisim" target="_self">https://soundcloud.com/trystavisim</a><br>	<a class="usually" href="https://instagram.com/trystavisim" target="_self">https://instagram.com/trystavisim</a></p><p>
-Зв'язок з гуртом:<br>
-+38 050 726-73-84 <br>info@trystavisim.com</p>                            </div>
-                        </div>
-                        <!-- End About Project -->
-                    	
-                    </div>
-                                    </div>
-                <!-- End Work Text -->
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-lg-10 col-lg-offset-1">
+        <!-- Work Title -->
+        <h1 class="work-full-title">КАРПАТОС</h1>
+        <!-- Work Categories -->
+        <div class="work-descr">Single, 2017</div>
+        <!-- Work Photo or Video -->
+        <div class="work-full-media">
+          <div class="fluid-width-video-wrapper" style="padding-top: 56.25%;">
+            <iframe
+              src="https://www.youtube.com/embed/lIBEOXYIMeE"
+              frameborder="0"
+              allowfullscreen=""
+              id="fitvid169424"></iframe>
+          </div>
         </div>
+        <!-- Work Text -->
+        <div class="work-full-text">
+          <div class="row">
+            <!-- Project Detail -->
+            <div class="col-md-4 col-lg-4">
+              <div class="work-detail">
+                <h6 class="uppercase">Деталі</h6>
+                <div class="work-full-detail">
+                  <p>
+                    <b>Mix &amp; Mastering:</b>&nbsp;<br />
+                    <a
+                      class="usually"
+                      href="https://www.facebook.com/ColoorsunMusic/"
+                      target="_blank">COLOORSUN music studio</a>
+                  </p><p>
+                    <b>Recording:&nbsp;</b>
+                    <a
+                      class="usually"
+                      href="https://www.facebook.com/Vitalik.Levshakov"
+                      target="_blank">Віталік Лєвшаков</a
+                    >,&nbsp;<br />Олeг Орєшніков,&nbsp; <a
+                      class="usually"
+                      href="https://www.facebook.com/solist.engin/"
+                      target="_blank">SOLIST Studio</a>
+                  </p><p><b>Дата релізу: </b>28&nbsp;вересня 2017</p>
+                </div>
+              </div>
+            </div>
+            <!-- End Project Detail -->
+            <!-- About Project -->
+            <div class="col-md-8 col-lg-8">
+              <div class="text-block">
+                <p>
+                  Представляємо нову пісню<b>&nbsp;Триставісім - «Карпатос»</b> з майбутнього альбому
+                  LP "<b>Мусай</b>".
+                </p><p>
+                  «Ми народились та живемо у краю, який за останні сто років встиг побувати у складі
+                  більш ніж десяти держав та державних утворень. Люди тут звикли покладатись тільки
+                  на себе, не довіряючи владі та не чекаючи від неї підтримки та схвалення їх стилю
+                  життя. Натомість єдність з природою та гармонія з Богом у душі лише допомагають їм
+                  долати будь-які перешкоди. Можливо, збоку це і виглядає трохи «дикувато», проте
+                  має на це свою правду», – кажуть музиканти.
+                </p><p>
+                  «Карпатос» – пісня, яка в музичному плані найкраще відображає наше сьогоднішнє
+                  бачення правильного поєднання рок-рифів, хіп-хоп- та панк-ритмів з автентичними
+                  фольковими мотивами. Мелодію, яка виспівується на початку пісні та проходить крізь
+                  всю композицію вигадав наш трубач Вова. Він якось наспівав її мені і додав, що з
+                  цього має вийти яскравий грувовий трек. В мене на той момент вже були накидані
+                  куплети, і на одній з репетицій ми вирішили поєднати все разом, а врешті розвили
+                  до повноцінної пісні. Під час роботи над композицією до нас приєднався
+                  ужгородський скретч-майстер DJ Vibes і, трохи проекспериментувавши, майстерно
+                  запилив до пісні пару-тройку скретчів, які природньо вписалися в загальне
+                  звучання», – розповідає фронтмен гурту Павло Генов,
+                </p><p>&nbsp;</p><p>
+                  ТРИСТАВІСІМ в мережі:<br />
+                  <a class="usually" href="http://trystavisim.com" target="_self"
+                    >http://trystavisim.com/</a
+                  ><br />
+                  <a class="usually" href="https://facebook.com/trystavisim" target="_self"
+                    >https://facebook.com/trystavisim</a
+                  ><br />
+                  <a class="usually" href="https://soundcloud.com/trystavisim" target="_self"
+                    >https://soundcloud.com/trystavisim</a
+                  ><br />
+                  <a class="usually" href="https://instagram.com/trystavisim" target="_self"
+                    >https://instagram.com/trystavisim</a>
+                </p><p>
+                  Зв'язок з гуртом:<br />
+                  +38 050 726-73-84 <br />info@trystavisim.com
+                </p>
+              </div>
+            </div>
+            <!-- End About Project -->
+          </div>
+        </div>
+        <!-- End Work Text -->
+      </div>
     </div>
+  </div>
 </section>
