--- a/src/pages/ajax/media/varosh-banda.astro
+++ b/src/pages/ajax/media/varosh-banda.astro
@@ -3,84 +3,110 @@ export const partial = true
 ---
 
 <section id="work-item" class="work-container">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 col-lg-10 col-lg-offset-1">
-                <!-- Work Title -->
-                <h1 class="work-full-title">Варош банда</h1>
-                <!-- Work Categories -->
-                <div class="work-descr">
-                    Офіційний кліп, 2015
-                </div>
-                <!-- Work Photo or Video -->
-                <div class="work-full-media">
-                    <div class="fluid-width-video-wrapper" style="padding-top: 56.25%;"><iframe
-                            src="https://www.youtube.com/embed/tqjUE5sPYYU" frameborder="0" allowfullscreen=""
-                            id="fitvid708998"></iframe></div>
-                </div>
-                <!-- Work Text -->
-                <div class="work-full-text">
-                    <div class="row">
-                        <!-- Project Detail -->
-                        <div class="col-md-4 col-lg-4">
-                            <div class="work-detail">
-                                <h6 class="uppercase">Деталі</h6>
-                                <div class="work-full-detail">
-
-                                    <p><b>Режисер:&nbsp;</b>Олег Варфоломєєв</p>
-                                    <p><b>Оператор:&nbsp;</b>Сергій Варфоломєєв</p>
-                                    <p><b>Креативний продюсер:&nbsp;<br></b>В'ячеслав Єгоров</p>
-                                    <p><b>Продакшн:&nbsp;</b> <a class="usually" href="http://fintstudio.com"
-                                            target="_blank">Студія «ФІНТ»</a></p>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Project Detail -->
-                        <!-- About Project -->
-                        <div class="col-md-8 col-lg-8">
-                            <h6 class="uppercase">Про кліп</h6>
-                            <div class="text-block">
-
-                                <p>Кліп на пісню Триставісім - «Варош банда» з нового альбому <a class="usually"
-                                        href="/Muzika/LACHO" target="_self">«ЛАЧО»</a>.&nbsp;</p>
-                                <p>«<b>Варош банда</b>» є своєрідною квінтесенцією всього нещодавно представленого
-                                    альбому «Лачо», а також втіленням потужної концертної енергетики колективу.</p>
-                                <p>Знімали вищезгадану музичну міні-стрічку спеціалісти ужгородської студії «Фінт», які
-                                    раніше вже працювали з нами&nbsp;над відео під назвою <a class="usually"
-                                        href="/Muzika/Dislokaciya" target="_self">«Дислокація»</a>. Режисером кліпу
-                                    виступив Олег Варфоломєєв. Зйомки проходили на двох різних локаціях – у мальовничому
-                                    селі Оріховиця в Ужгородському районі Закарпатської області, а також у приміщенні в
-                                    старому Ужгороді, де ми зібрали величезну «<b>Варош банду</b>» зі своїх друзів та
-                                    знайомих.</p>
-                                <p>
-                                    Приєднуйтесь в соцмережах!<br>
-                                    <a class="usually" href="http://vk.com/trystavisim"
-                                        title="http://vk.com/trystavisim"
-                                        target="_blank">http://vk.com/trystavisim</a><br>
-                                    <a class="usually" href="https://fb.com/trystavisim"
-                                        title="https://fb.com/trystavisim"
-                                        target="_blank">https://fb.com/trystavisim</a><br> <a class="usually"
-                                        href="https://soundcloud.com/trystavisim"
-                                        target="_self">https://soundcloud.com/trystavisim</a>
-                                </p>
-                                <p>
-                                    Зв'язок з гуртом:<br>
-                                    +38 095 487 55 50<br> <a class="usually" href="mailto:info@trystavisim.com"
-                                        target="_self">info@trystavisim.com</a></p>
-                            </div>
-                        </div>
-                        <!-- End About Project -->
-
-                    </div>
-                    <!-- Button -->
-                    <div class="work-full-action">
-                        <a href="/download/Varosh-Banda.mp3"
-                            class="btn btn-spacia btn-color btn-medium download-file-work">Скачати пісню</a>
-                    </div>
-                    <!-- End Button -->
-                </div>
-                <!-- End Work Text -->
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-lg-10 col-lg-offset-1">
+        <!-- Work Title -->
+        <h1 class="work-full-title">Варош банда</h1>
+        <!-- Work Categories -->
+        <div class="work-descr">Офіційний кліп, 2015</div>
+        <!-- Work Photo or Video -->
+        <div class="work-full-media">
+          <div class="fluid-width-video-wrapper" style="padding-top: 56.25%;">
+            <iframe
+              src="https://www.youtube.com/embed/tqjUE5sPYYU"
+              frameborder="0"
+              allowfullscreen=""
+              id="fitvid708998"></iframe>
+          </div>
         </div>
+        <!-- Work Text -->
+        <div class="work-full-text">
+          <div class="row">
+            <!-- Project Detail -->
+            <div class="col-md-4 col-lg-4">
+              <div class="work-detail">
+                <h6 class="uppercase">Деталі</h6>
+                <div class="work-full-detail">
+                  <p><b>Режисер:&nbsp;</b>Олег Варфоломєєв</p>
+                  <p><b>Оператор:&nbsp;</b>Сергій Варфоломєєв</p>
+                  <p><b>Креативний продюсер:&nbsp;<br /></b>В'ячеслав Єгоров</p>
+                  <p>
+                    <b>Продакшн:&nbsp;</b>
+                    <a class="usually" href="http://fintstudio.com" target="_blank">Студія «ФІНТ»</a
+                    >
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- End Project Detail -->
+            <!-- About Project -->
+            <div class="col-md-8 col-lg-8">
+              <h6 class="uppercase">Про кліп</h6>
+              <div class="text-block">
+                <p>
+                  Кліп на пісню Триставісім - «Варош банда» з нового альбому <a
+                    class="usually"
+                    href="/Muzika/LACHO"
+                    target="_self">«ЛАЧО»</a
+                  >.&nbsp;
+                </p>
+                <p>
+                  «<b>Варош банда</b>» є своєрідною квінтесенцією всього нещодавно представленого
+                  альбому «Лачо», а також втіленням потужної концертної енергетики колективу.
+                </p>
+                <p>
+                  Знімали вищезгадану музичну міні-стрічку спеціалісти ужгородської студії «Фінт»,
+                  які раніше вже працювали з нами&nbsp;над відео під назвою <a
+                    class="usually"
+                    href="/Muzika/Dislokaciya"
+                    target="_self">«Дислокація»</a
+                  >. Режисером кліпу виступив Олег Варфоломєєв. Зйомки проходили на двох різних
+                  локаціях – у мальовничому селі Оріховиця в Ужгородському районі Закарпатської
+                  області, а також у приміщенні в старому Ужгороді, де ми зібрали величезну «<b
+                    >Варош банду</b
+                  >» зі своїх друзів та знайомих.
+                </p>
+                <p>
+                  Приєднуйтесь в соцмережах!<br />
+                  <a
+                    class="usually"
+                    href="http://vk.com/trystavisim"
+                    title="http://vk.com/trystavisim"
+                    target="_blank">http://vk.com/trystavisim</a
+                  ><br />
+                  <a
+                    class="usually"
+                    href="https://fb.com/trystavisim"
+                    title="https://fb.com/trystavisim"
+                    target="_blank">https://fb.com/trystavisim</a
+                  ><br />
+                  <a class="usually" href="https://soundcloud.com/trystavisim" target="_self"
+                    >https://soundcloud.com/trystavisim</a
+                  >
+                </p>
+                <p>
+                  Зв'язок з гуртом:<br />
+                  +38 095 487 55 50<br />
+                  <a class="usually" href="mailto:info@trystavisim.com" target="_self"
+                    >info@trystavisim.com</a
+                  >
+                </p>
+              </div>
+            </div>
+            <!-- End About Project -->
+          </div>
+          <!-- Button -->
+          <div class="work-full-action">
+            <a
+              href="/trystavisim/download/Varosh-Banda.mp3"
+              class="btn btn-spacia btn-color btn-medium download-file-work">Скачати пісню</a
+            >
+          </div>
+          <!-- End Button -->
+        </div>
+        <!-- End Work Text -->
+      </div>
     </div>
+  </div>
 </section>
