--- a/src/pages/ajax/percha.astro
+++ b/src/pages/ajax/percha.astro
@@ -38,7 +38,8 @@ export const partial = true
                     <a
                       class="usually"
                       href="http://nashformat.ua/catalog/muzyka_1/ukrainskyj_rok/alternatyva/trysta8isim_percha/"
-                      target="_blank">Замовити</a>
+                      target="_blank">Замовити</a
+                    >
                   </p>
                 </div>
               </div>
@@ -63,14 +64,6 @@ export const partial = true
             </div>
             <!-- End About Project -->
           </div>
-          <!-- Button -->
-          <div class="work-full-action">
-            <a
-              href="/trystavisim/download/Trystavisim_PERCHA.zip"
-              class="btn btn-spacia btn-color btn-medium download-file-work">Скачати альбом</a
-            >
-          </div>
-          <!-- End Button -->
         </div>
         <!-- End Work Text -->
       </div>
