--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,16 +35,11 @@ import PageLayout from '../layouts/PageLayout.astro'
           </ul>
         </div>
         <div class="nav-social-links right">
-          <a
-            class="current"
-            title=""
-            href="http://www.trystavisim.com/ua/switchlanguage/to/ua/2"
-            data-original-title="Українська"><i class="fa flag-ukraine"></i></a
+          <a class="current" title="" href="/trystavisim" data-original-title="Українська"
+            ><i class="fa flag-ukraine"></i></a
           >
-          <a
-            title=""
-            href="http://www.trystavisim.com/ua/switchlanguage/to/en/2"
-            data-original-title="English"><i class="fa flag-united-kingdom"></i></a
+          <a title="" href="/trystavisim/en" data-original-title="English"
+            ><i class="fa flag-united-kingdom"></i></a
           >
         </div>
         <div class="nav-social-links right social">
@@ -375,7 +370,7 @@ End Works Filter -->
   <!-- End Portfolio Section -->
   <!-- Tour Section -->
   <section
-    style="background-image: url(https://trystavisim.com/var/plain_site/storage/trystavisim/images/media2/trystavisim/images/convert_bg_lowq/13891-1-ukr-UA/convert_bg_lowq.jpg)"
+    style="background-image: url(/trystavisim/images/full-width-images/convert_bg_lowq.jpg)"
     class="page-section dark-bg image-color-bg"
     id="Afisha"
   >
@@ -662,7 +657,7 @@ End Works Filter -->
   <!-- End About Us Section -->
   <!-- Team Section -->
   <section
-    style="background-image: url(https://trystavisim.com/var/plain_site/storage/trystavisim/images/media2/trystavisim/images/faita-bg-min/12253-1-ukr-UA/faita-bg-min.jpg)"
+    style="background-image: url(/trystavisim/images/full-width-images/faita-bg-min.jpg)"
     class="small-section dark-bg image-color-bg team-section"
     id="TRISTAVIISIIM"
   >
@@ -941,7 +936,7 @@ End Works Filter -->
       <br />
       <div class="row">
         <div class="col-md-8 col-md-offset-2 col-lg-8 col-lg-offset-2">
-          <a href="/istoriya" class="btn btn-spacia btn-w btn-medium">Історія</a>
+          <a href="/trystavisim/istoriya" class="btn btn-spacia btn-w btn-medium">Історія</a>
         </div>
       </div>
     </div>
