delete base patch

--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -21,39 +21,37 @@ import '../css/styles.css'
       property="og:description"
       content="Триставісім — рок-гурт з особливою енергетикою і драйвом. Рокову основу вдало поєднує з напористими колоритними мелодіями, в яких впізнаються карпато-балканські мотиви. На виступах гурт багато уваги приділяє контакту між глядачами і музикантами, та кожен з учасників гурту намагається максимально доповнити загальний вигляд і звучання гурту своєю харизмою та грою на інструменті. Гурт багато гарстролює по Україні та за її межами, даючи при цьому яскраві, емоційні та потужні якісні живі шоу."
     />
-    <meta property="og:image" content="/trystavisim/images/trystavisim-og-image.jpg" />
+    <meta property="og:image" content="/images/trystavisim-og-image.jpg" />
     <meta name="google-site-verification" content="y5BNQPjz3VNiR47F00zPsx3tq7G15XIWuSawn3WNBnU" />
     <meta name="robots" content="INDEX, FOLLOW" />
     <link rel="Home" href="https://trystavisim.com/" title="trystavisim front page" />
     <link rel="Index" href="https://trystavisim.com/" />
-    <link rel="Shortcut icon" href="/trystavisim/favicon.ico" type="image/x-icon" />
+    <link rel="Shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/style-responsive.css" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/jquery.bxslider.css" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/fonts-styles/fonts-2.css" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/menu/top-left.css" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/simple-line-icons.css" />
-    <link rel="stylesheet" type="text/css" href="/trystavisim/css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/css/style-responsive.css" />
+    <link rel="stylesheet" type="text/css" href="/css/jquery.bxslider.css" />
+    <link rel="stylesheet" type="text/css" href="/css/fonts-styles/fonts-2.css" />
+    <link rel="stylesheet" type="text/css" href="/css/menu/top-left.css" />
+    <link rel="stylesheet" type="text/css" href="/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/simple-line-icons.css" />
+    <link rel="stylesheet" type="text/css" href="/css/custom.css" />
   </head><div class="fit-vids-style" id="fit-vids-style" style="display: none;"></div>
-  <script type="text/javascript" async="" is:inline src="/trystavisim/js/analytics.js"></script>
-  <script src="/trystavisim/js/all.js" is:inline async="" crossorigin="anonymous"></script>
-  <script id="facebook-jssdk" src="/trystavisim/js/all(1).js"></script>
-  <script async="" src="/trystavisim/js/gtm.js" is:inline></script>
+  <script type="text/javascript" async="" is:inline src="/js/analytics.js"></script>
+  <script src="/js/all.js" is:inline async="" crossorigin="anonymous"></script>
+  <script id="facebook-jssdk" src="/js/all(1).js"></script>
+  <script async="" src="/js/gtm.js" is:inline></script>
   <script
     type="text/javascript"
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSHX4ya-5IEP2ns5qa2pSA86EsBJNJ33o&sensor=false"
   ></script>
-  <script type="text/javascript" charset="UTF-8" is:inline src="/trystavisim/js/common.js"></script>
-  <script type="text/javascript" charset="UTF-8" is:inline src="/trystavisim/js/util.js"></script>
-  <script type="text/javascript" charset="UTF-8" is:inline src="/trystavisim/js/map.js"></script>
-  <script type="text/javascript" charset="UTF-8" is:inline src="/trystavisim/js/geocoder.js"
-  ></script>
-  <script type="text/javascript" charset="UTF-8" is:inline src="/trystavisim/js/marker.js"></script>
-  <script type="text/javascript" charset="UTF-8" is:inline src="/trystavisim/js/infowindow.js"
-  ></script>
+  <script type="text/javascript" charset="UTF-8" is:inline src="/js/common.js"></script>
+  <script type="text/javascript" charset="UTF-8" is:inline src="/js/util.js"></script>
+  <script type="text/javascript" charset="UTF-8" is:inline src="/js/map.js"></script>
+  <script type="text/javascript" charset="UTF-8" is:inline src="/js/geocoder.js"></script>
+  <script type="text/javascript" charset="UTF-8" is:inline src="/js/marker.js"></script>
+  <script type="text/javascript" charset="UTF-8" is:inline src="/js/infowindow.js"></script>
   <style
     type="text/css"
     data-fbcssmodules="css:fb.css.base css:fb.css.dialog css:fb.css.iframewidget css:fb.css.customer_chat_plugin_iframe"
@@ -760,7 +758,7 @@ import '../css/styles.css'
             <div class="nav-logo-wrap">
               <a href="/#Home" class="logo dark" style="height: 55px; line-height: 55px;">
                 <img
-                  src="/trystavisim/Oficijnij-sajt-gurtu_large.png"
+                  src="/Oficijnij-sajt-gurtu_large.png"
                   width="158"
                   height="54"
                   style="border: 0px  ;"
@@ -805,10 +803,7 @@ import '../css/styles.css'
                 rel="noopener"
                 data-original-title="Trystavisim on Spotify"
               >
-                <img
-                  src="/trystavisim/media/Spotify_Icon_RGB_Green.png"
-                  alt="Trystavisim on Spotify"
-                />
+                <img src="/media/Spotify_Icon_RGB_Green.png" alt="Trystavisim on Spotify" />
               </a>
               <a
                 title=""
@@ -818,7 +813,7 @@ import '../css/styles.css'
                 rel="noopener"
                 data-original-title="Trystavisim on Apple Music"
               >
-                <img src="/trystavisim/images/en-us.png" alt="Trystavisim on Apple Music" />
+                <img src="/images/en-us.png" alt="Trystavisim on Apple Music" />
               </a>
               <a
                 class="desktop-link"
@@ -920,11 +915,8 @@ import '../css/styles.css'
       <div class="work-loader"></div>
     </div>
     <!-- End Works Expander -->
-    <script
-      type="text/javascript"
-      is:inline
-      src="/trystavisim/js/jquery-1.11.1.min.js"
-      charset="utf-8"></script>
+    <script type="text/javascript" is:inline src="/js/jquery-1.11.1.min.js" charset="utf-8"
+    ></script>
     <script type="text/javascript">
       ;(function ($) {
         var _rootUrl = '/',
@@ -1001,33 +993,24 @@ import '../css/styles.css'
         $.fn.ez = _ezLoad
       })(jQuery)
     </script>
-    <script type="text/javascript" src="/trystavisim/js/jquery-migrate-1.2.1.min.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.easing.1.3.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/bootstrap.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.scrollTo.min.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.localScroll.min.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.viewport.mini.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.countTo.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.appear.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.ba-hashchange.min.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.fittext.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.sticky.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.parallax-1.1.3.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.fitvids.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.bxslider.min.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/jquery.mixitup.min.js" charset="utf-8"
-    ></script>
-    <script type="text/javascript" src="/trystavisim/js/initmap.min.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/trystavisim/js/placeholder.js" charset="utf-8"></script>
-    <script type="text/javascript" src="/trystavisim/js/all(2).js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery-migrate-1.2.1.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.easing.1.3.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.scrollTo.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.localScroll.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.viewport.mini.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.countTo.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.appear.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.ba-hashchange.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.fittext.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.sticky.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.parallax-1.1.3.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.fitvids.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.bxslider.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/jquery.mixitup.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/initmap.min.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/placeholder.js" charset="utf-8"></script>
+    <script type="text/javascript" src="/js/all(2).js" charset="utf-8"></script>
     <div id="fb-root" class="fb_reset">
       <div style="position: absolute; top: -10000px; width: 0px; height: 0px;">
         <div></div>
