--- a/src/pages/ajax/media/dislokaciya.astro
+++ b/src/pages/ajax/media/dislokaciya.astro
@@ -72,7 +72,7 @@ export const partial = true
           <!-- Button -->
           <div class="work-full-action">
             <a
-              href="/trystavisim/download/Триста8ісім-Дислокація.mp3"
+              href="/download/Триста8ісім-Дислокація.mp3"
               class="btn btn-spacia btn-color btn-medium download-file-work">Скачати пісню</a
             >
           </div>
