--- a/src/pages/ajax/media/en/varosh-banda.astro
+++ b/src/pages/ajax/media/en/varosh-banda.astro
@@ -87,7 +87,7 @@ export const partial = true
           <!-- Button -->
           <div class="work-full-action">
             <a
-              href="/trystavisim/download/Varosh-Banda.mp3"
+              href="/download/Varosh-Banda.mp3"
               class="btn btn-spacia btn-color btn-medium download-file-work">Download the song</a
             >
           </div>
