--- a/src/pages/ajax/media/varosh-banda.astro
+++ b/src/pages/ajax/media/varosh-banda.astro
@@ -99,7 +99,7 @@ export const partial = true
           <!-- Button -->
           <div class="work-full-action">
             <a
-              href="/trystavisim/download/Varosh-Banda.mp3"
+              href="/download/Varosh-Banda.mp3"
               class="btn btn-spacia btn-color btn-medium download-file-work">Скачати пісню</a
             >
           </div>
