--- a/src/pages/en/afisha.astro
+++ b/src/pages/en/afisha.astro
@@ -4,7 +4,7 @@ import PageLayout from '../../layouts/EnPageLayout.astro'
 
 <PageLayout>
   <section
-    style="background-image: url(/trystavisim/images/full-width-images/convert_bg_lowq.jpg)"
+    style="background-image: url(/images/full-width-images/convert_bg_lowq.jpg)"
     class="page-section padding-bot-null margin-bot dark-bg image-bg"
   >
     <div class="bg-overlay-1"></div>
@@ -24,8 +24,7 @@ import PageLayout from '../../layouts/EnPageLayout.astro'
       <br />
       <div class="row text-center">
         <p>
-          <a href="/trystavisim/en/arhiv-koncertiv" class="btn btn-spacia btn-large">Tour Archive</a
-          >
+          <a href="/en/arhiv-koncertiv" class="btn btn-spacia btn-large">Tour Archive</a>
         </p>
       </div>
     </div>
