--- a/src/pages/en/arhiv-koncertiv.astro
+++ b/src/pages/en/arhiv-koncertiv.astro
@@ -4,7 +4,7 @@ import PageLayout from '../../layouts/EnPageLayout.astro'
 
 <PageLayout>
   <section
-    style="background-image: url(/trystavisim/images/full-width-images/concert-bg-min.jpg)"
+    style="background-image: url(/images/full-width-images/concert-bg-min.jpg)"
     class="page-section padding-bot-null margin-bot dark-bg image-bg"
   >
     <div class="bg-overlay-2"></div>
@@ -964,9 +964,7 @@ import PageLayout from '../../layouts/EnPageLayout.astro'
           <br />
           <div class="row text-center">
             <p>
-              <a href="/trystavisim/en/afisha" class="btn btn-spacia btn-large btn-color"
-                >Upcoming shows</a
-              >
+              <a href="/en/afisha" class="btn btn-spacia btn-large btn-color">Upcoming shows</a>
             </p>
           </div>
         </div>
