--- a/public/css/fonts-styles/fonts-1.css
+++ b/public/css/fonts-styles/fonts-1.css
@@ -7,11 +7,11 @@
  * from Google Fonts
  * */
 
-@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
 /* 
  * Second font load 
  * from Google Fonts
  * */
 
-@import url(http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin,latin-ext,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic&subset=latin,latin-ext,cyrillic);
