--- a/public/css/fonts-styles/fonts-3.css
+++ b/public/css/fonts-styles/fonts-3.css
@@ -7,39 +7,47 @@
  * from Google Fonts
  * */
 
-@import url(http://fonts.googleapis.com/css?family=Istok+Web:400,700,400italic,700italic&subset=latin,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Istok+Web:400,700,400italic,700italic&subset=latin,cyrillic);
 
 /* 
  * Second font load 
  * from Google Fonts
  * */
 
-@import url(http://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic&subset=latin,cyrillic);
+@import url(https://fonts.googleapis.com/css?family=Noto+Serif:400,700,400italic,700italic&subset=latin,cyrillic);
 
 body,
-h1,h2,h3,h4,h5,h6,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
 .tc-author,
 .blog-item-data,
-.comment-item-data{
+.comment-item-data {
 	font-family: "Istok Web", arial, sans-serif;
 }
-.main-nav{
+
+.main-nav {
 	letter-spacing: 1px;
 }
-.inner-nav ul > li > a{
+
+.inner-nav ul>li>a {
 	color: #444;
 }
+
 .section-heading,
-.small-section-heading{
+.small-section-heading {
 	text-transform: uppercase;
 	letter-spacing: 1px;
 }
-.work-title{
+
+.work-title {
 	font-weight: 700;
 }
 
-.serif
-.text,
+.serif .text,
 blockquote,
 .home-description,
 .section-title,
@@ -57,14 +65,14 @@ blockquote,
 .contact-text,
 .text-block,
 .spasia-tabs-cont,
-.accordion > dd,
-.toggle > dd,
+.accordion>dd,
+.toggle>dd,
 .date-num,
 .blog-item-body,
 .blog-item-more,
 .widget-text,
 .widget-menu li,
 .widget-menu li small,
-.widget-posts li{
+.widget-posts li {
 	font-family: "Noto Serif", "Times New Roman", Times, serif;
 }
